--- a/style.css
+++ b/style.css
@@ -1,45 +1,52 @@
 * {
   margin: 0;
   font-weight: normal;
+  font-size: 12.8px;
 }
 body {
   background-image: url(./assets/windows-11-wallpaper.jpg);
   background-size: cover;
   background-repeat: no-repeat;
 }
-.clickable {
+button {
+  background-color: transparent;
+  outline: 0;
+  border: none;
   display: flex;
-  align-self: stretch;
   align-items: center;
   border: 1.5px solid transparent;
   border-radius: 5px;
   transition: border 0.1s, background-color 0.1s;
   padding: 5px;
 }
-.clickable.windows-logo {
+button:hover {
+  background-color: rgba(255, 255, 255, 0.7);
+  border-color: rgba(0, 0, 0, 0.05);
+}
+button:active {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+.windows-logo {
   padding: 8px;
 }
-.clickable.taskbar-icon {
-  max-width: 30px;
+.taskbar-icon {
+  max-width: 45px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.clickable.taskbar-icon * {
+.taskbar-icon * {
   max-width: 100%;
   max-height: 100%;
   object-fit: contain;
 }
-.right .clickable {
+.right button {
+  display: flex;
+  align-self: stretch;
   padding: 5px 8px;
-}
-.clickable:hover {
-  background-color: rgba(255, 255, 255, 0.7);
-  border-color: rgba(0, 0, 0, 0.05);
 }
 h3,
 h4 {
-  font-size: 0.8rem;
   font-family: "Segoe UI", sans-serif;
   user-select: none;
 }
@@ -54,7 +61,8 @@ h4 {
 .wrapper {
   width: 100vw;
   height: fit-content;
-  background-color: #e5effa;
+  /* background-color: #e5effa; */
+  background: linear-gradient(90deg, #e5effa, #d7e0f7, #e5effa);
   border-top: 1.5px solid rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: space-between;
@@ -82,13 +90,15 @@ h4 {
 .weather-text {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   /* gap: 2px; */
 }
 .centre {
   display: flex;
   align-items: center;
 }
-#windows-and-search, #taskbar-icons {
+#windows-and-search,
+#taskbar-icons {
   display: flex;
   align-items: center;
 }
@@ -103,7 +113,10 @@ h4 {
   border: 0;
   background-color: transparent;
   font-family: "Segoe UI", sans-serif;
-  font-size: 0.84rem;
+  font-size: 1.1rem;
+}
+#search-input::placeholder {
+  opacity: 0.6;
 }
 #taskbar-icons {
   margin-left: 4px;
@@ -120,6 +133,11 @@ h4 {
   align-items: center;
   gap: 10px;
 }
+#search-box:hover {
+  background-color: rgba(245, 245, 245, 0.7);
+  /* opacity: 0.85; */
+  /* filter: brightness(0.97); */
+}
 #search-box h3 {
   color: rgba(0, 0, 0, 0.6);
   font-size: 0.85rem;
@@ -133,7 +151,7 @@ h4 {
 }
 #taskbar-language {
   text-transform: uppercase;
-  font-size: 0.75rem;
+  font-size: 0.95rem;
 }
 #time-and-notifications {
   display: flex;
