--- a/style.css
+++ b/style.css
@@ -26,8 +26,19 @@ button:hover {
 button:active {
   background-color: rgba(255, 255, 255, 0.5);
 }
+.bouncy-click > img {
+  width: 100%;
+  transition: padding 0.1s;
+}
+.bouncy-click:active > img {
+  padding: 3px;
+}
 .windows-logo {
-  padding: 8px;
+  max-width: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px; */
 }
 .taskbar-icon {
   max-width: 45px;
