Fixed bug with curly brackets

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ button:active {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 8px; */
+  padding: 8px;
 }
 .taskbar-icon {
   max-width: 45px;
