--- a/style.css
+++ b/style.css
@@ -20,11 +20,11 @@ button {
   padding: 5px;
 }
 button:hover {
-  background-color: rgba(255, 255, 255, 0.7);
-  border-color: rgba(0, 0, 0, 0.05);
+  background-color: rgba(255, 255, 255, 0.6);
+  border-color: #dde7f2;
 }
 button:active {
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.4);
 }
 .bouncy-click > img {
   width: 100%;
