--- a/style.css
+++ b/style.css
@@ -213,6 +213,15 @@ h4 {
 
 /* Metadata configuration */
 
+body {
+  margin: 0;
+  font-weight: normal;
+  font-size: 12.8px;
+}
+body * {
+  font-family: "Segoe UI", sans-serif;
+}
+
 #overall-div {
   width: 100vw;
   height: 100vh;
@@ -239,4 +248,61 @@ footer {
   /* Colour */
   background: linear-gradient(90deg, #e5effa, #d7e0f7, #e5effa);
   border-top: 1.5px solid rgba(0, 0, 0, 0.1);
+}
+
+#footer-left, #footer-centre, #footer-right {
+  display: flex;
+  align-items: center;
+}
+
+/* Buttons in footer */
+
+footer button {
+  /* Colour */
+
+  background-color: transparent;
+  border: 1px solid transparent;
+  border-radius: 5px;
+
+  /* Design */
+
+  display: flex;
+  align-items: center;
+  align-self: stretch; /* Might not work for now */
+}
+footer button:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+  border-color: rgba(0, 0, 0, 0.05);
+}
+footer button:active {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+/* Taskbar buttons */
+
+footer button:active.taskbar-button img {
+  transform: scale(0.8);
+}
+
+/* Left div in <footer> */
+
+#weather-button {
+  padding-left: 10px;
+  padding-right: 60px;
+  display: flex;
+  gap: 7px;
+}
+#weather-button-text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+#weather-button-text h4 {
+  color: grey;
+}
+
+/* Centre div in <footer> */
+
+#windows-button {
+
 }
