--- a/style.css
+++ b/style.css
@@ -1,20 +1,14 @@
-* {
-  margin: 0;
-  font-weight: normal;
-  font-size: 12.8px;
-}
-
 /* Metadata configuration */
 
-body {
-  margin: 0;
-  font-weight: normal;
-  font-size: 12.8px;
-}
-body * {
+html {
+  /* font-size: 12.8px; */
+  font-size: 30px;
   font-family: "Segoe UI", sans-serif;
+  font-weight: normal;
 }
-
+body, h3, h4 {
+  margin: 0;
+}
 #overall-div {
   width: 100vw;
   height: 100vh;
@@ -29,8 +23,8 @@ body * {
 }
 footer {
   width: 100vw;
-  min-height: 300px;
-  height: fit-content;
+  /* max-height: 100px;
+  height: fit-content; */
 
   padding: 3px 0;
   margin-top: auto;
@@ -43,25 +37,25 @@ footer {
   border-top: 1.5px solid rgba(0, 0, 0, 0.1);
 }
 
-#footer-left, #footer-centre, #footer-right {
+#footer-left,
+#footer-centre,
+#footer-right {
   display: flex;
+  flex-direction: row;
   align-items: center;
 }
 
 /* Buttons in footer */
 
 footer button {
-  /* Colour */
-
   background-color: transparent;
   border: 1px solid transparent;
   border-radius: 5px;
-
-  /* Design */
+  transition: background-color 0.1s, border-color 0.1s;
 
   display: flex;
   align-items: center;
-  align-self: stretch; /* Might not work for now */
+  align-self: stretch;
 }
 footer button:hover {
   background-color: rgba(255, 255, 255, 0.5);
@@ -73,7 +67,22 @@ footer button:active {
 
 /* Taskbar buttons */
 
-footer button:active.taskbar-button img {
+button.taskbar-button {
+  width: 30px;
+  height: 30px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  padding: 20px;
+}
+
+button.taskbar-button img {
+  transition: transform 0.1s;
+}
+
+button:active.taskbar-button img {
   transform: scale(0.8);
 }
 
@@ -96,6 +105,24 @@ footer button:active.taskbar-button img {
 
 /* Centre div in <footer> */
 
-#windows-button {
+#taskbar-icons {
+  display: flex;
+  flex-direction: row;
+}
 
+/* Right div in <footer> */
+
+#taskbar-language {
+  text-transform: uppercase;
+}
+#time-and-notifications-div {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 8px;
+}
+#time-and-notifications-text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
