--- a/style.css
+++ b/style.css
@@ -1,13 +1,22 @@
 /* Metadata configuration */
 
-html {
-  /* font-size: 12.8px; */
-  font-size: 30px;
+* {
   font-family: "Segoe UI", sans-serif;
   font-weight: normal;
 }
-body, h3, h4 {
+html {
+  font-size: 12.8px;
+}
+body,
+h3,
+h4 {
   margin: 0;
+}
+h3 {
+  font-size: 1rem;
+}
+h4 {
+  font-size: 0.9rem;
 }
 #overall-div {
   width: 100vw;
@@ -23,10 +32,10 @@ body, h3, h4 {
 }
 footer {
   width: 100vw;
-  /* max-height: 100px;
-  height: fit-content; */
+  max-height: 100px;
+  height: fit-content;
 
-  padding: 3px 0;
+  padding: 4px 0;
   margin-top: auto;
   display: flex;
   justify-content: space-between;
@@ -43,6 +52,16 @@ footer {
   display: flex;
   flex-direction: row;
   align-items: center;
+  align-self: stretch;
+}
+#footer-left {
+  margin-left: 11px;
+}
+#footer-centre {
+  gap: 7px;
+}
+#footer-right {
+  margin-right: 14px;
 }
 
 /* Buttons in footer */
@@ -58,7 +77,7 @@ footer button {
   align-self: stretch;
 }
 footer button:hover {
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.55);
   border-color: rgba(0, 0, 0, 0.05);
 }
 footer button:active {
@@ -90,7 +109,7 @@ button:active.taskbar-button img {
 
 #weather-button {
   padding-left: 10px;
-  padding-right: 60px;
+  padding-right: 75px;
   display: flex;
   gap: 7px;
 }
@@ -105,6 +124,25 @@ button:active.taskbar-button img {
 
 /* Centre div in <footer> */
 
+#search-box {
+  display: flex;
+  align-items: center;
+  position: relative;
+  min-width: fit-content;
+  min-height: fit-content;
+}
+#search-box input {
+  font-size: 1.1rem;
+  background-color: white;
+  border: 1.5px solid rgba(0, 0, 0, 0.2);
+  border-radius: 20px;
+  padding: 6px 35px;
+}
+#search-box img {
+  position: absolute;
+  left: 12px;
+}
+
 #taskbar-icons {
   display: flex;
   flex-direction: row;
@@ -112,8 +150,12 @@ button:active.taskbar-button img {
 
 /* Right div in <footer> */
 
+#taskbar-tray-icon {
+  padding: 0 10px;
+}
 #taskbar-language {
   text-transform: uppercase;
+  padding: 0 3px;
 }
 #time-and-notifications-div {
   display: flex;
