--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ button:active.taskbar-button img {
   background-color: white;
   border: 1.5px solid rgba(0, 0, 0, 0.2);
   border-radius: 20px;
-  padding: 6px 35px;
+  padding: 6px 30px 6px 35px;
 }
 #search-box img {
   position: absolute;
