--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ h4 {
 }
 body {
   background-image: url(./assets/desktop/windows-11-wallpaper.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
   background-size: cover;
 }
 h3 {
@@ -83,7 +85,7 @@ footer button {
   align-self: stretch;
 }
 footer button:hover {
-  background-color: rgba(255, 255, 255, 0.55);
+  background-color: rgba(255, 255, 255, 0.6);
   border-color: rgba(0, 0, 0, 0.05);
 }
 footer button:active {
