--- a/style.css
+++ b/style.css
@@ -13,10 +13,11 @@ h4 {
   margin: 0;
 }
 body {
-  background-image: url(./assets/desktop/windows-11-wallpaper.jpg);
+  background-image: url(./assets/desktop/windows-11-wallpaper-transparent.png),
+    radial-gradient(circle at 50% 85%, white, #83acc8);
   background-repeat: no-repeat;
   background-position: center center;
-  background-size: cover;
+  background-size: contain;
 }
 h3 {
   font-size: 1rem;
