--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ footer button {
   background-color: transparent;
   border: 1px solid transparent;
   border-radius: 5px;
-  transition: background-color 0.1s, border-color 0.1s;
+  transition: background-color 0.1s ease, border-color 0.1s ease;
 
   display: flex;
   align-items: center;
@@ -124,7 +124,7 @@ button.taskbar-button {
 }
 
 button.taskbar-button img {
-  transition: transform 0.1s;
+  transition: transform 0.1s ease;
 }
 
 button:active.taskbar-button img {
