--- a/style.css
+++ b/style.css
@@ -164,11 +164,14 @@ button:active.taskbar-button img {
 #search-box:hover, #search-box:focus-within {
   opacity: 0.7;
 }
+#search-box-icon {
+  transform: rotate(5deg);
+}
 #search-box input {
   outline: none;
-  font-size: 1.1rem;
-  background-color: white;
-  border: 1.5px solid rgba(0, 0, 0, 0.2);
+  font-size: 1.11rem;
+  background-color: rgba(255, 255, 255, 0.9);
+  border: 1.5px solid rgba(0, 0, 0, 0.17);
   border-radius: 20px;
   padding: 6px 20px 6px 36px;
 }
