--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ button:active.taskbar-button img {
 #taskbar-tray-icon {
   padding: 0 10px;
 }
-#taskbar-language {
+#taskbar-language h3 {
   text-transform: uppercase;
   padding: 0 3px;
 }
@@ -258,7 +258,7 @@ button:active.taskbar-button img {
   }
 }
 
-@media only screen and (orientation: landscape) and (max-width: 860px) {
+@media only screen and (orientation: landscape) and (max-width: 885px) {
   * {
     font-size: 1.6vw;
   }
@@ -273,18 +273,26 @@ button:active.taskbar-button img {
   }
   /* #footer-left */
   #weather-button {
-    padding-right: 15px;
+    padding-right: 3vw;
+    gap: 1vw;
   }
   #weather-button img {
     width: 3vw;
   }
 
   /* #footer-centre */
+  #windows-button {
+    margin: 0;
+  }
+  #search-box {
+    height: 100%;
+  }
   #search-box input {
     padding-left: 4vw;
     padding-right: 3vw;
     width: 10vw;
-    height: 2vmax;
+    height: 45%;
+    /* height: 100%; */
     font-size: 1.8vw;
   }
   #search-box img {
@@ -292,21 +300,31 @@ button:active.taskbar-button img {
     width: 1.75vw;
   }
   button.taskbar-button {
+    width: 2vw;
     padding: 2.5vw;
   }
   button.taskbar-button img {
     width: 3vw;
+  }
+  #taskbar-icons {
+    margin: 0;
   }
 
   /* In #footer-right */
   button {
     padding: 0 3px;
   }
+  #taskbar-tray-icon {
+    padding: 0 0.8vw;
+  }
   #taskbar-tray-icon img {
     width: 1.5vw;
   }
   #windows-update-icon img {
     width: 2vw;
+  }
+  #taskbar-language {
+    padding: 0 1vw;
   }
   #taskbar-control-panel img {
     width: 8vw;
