--- a/style.css
+++ b/style.css
@@ -291,7 +291,7 @@ button:active.taskbar-button img {
     padding-left: 4vw;
     padding-right: 3vw;
     width: 10vw;
-    height: 45%;
+    height: 2vw;
     /* height: 100%; */
     font-size: 1.8vw;
   }
