--- a/style.css
+++ b/style.css
@@ -171,8 +171,7 @@ button:active.taskbar-button img {
   display: flex;
   align-items: center;
   position: relative;
-  min-width: fit-content;
-  min-height: fit-content;
+  height: fit-content;
 }
 #search-box:hover,
 #search-box:focus-within {
@@ -266,6 +265,7 @@ button:active.taskbar-button img {
     /* grid-template-columns: repeat(3, minmax(0, 1fr)); */
     display: flex;
     justify-content: space-between;
+    padding: 0.25vw 0;
   }
   #footer-left,
   #footer-right {
@@ -310,7 +310,7 @@ button:active.taskbar-button img {
     margin: 0;
   }
 
-  /* In #footer-right */
+  /* #footer-right */
   button {
     padding: 0 3px;
   }
@@ -318,7 +318,7 @@ button:active.taskbar-button img {
     padding: 0 0.8vw;
   }
   #taskbar-tray-icon img {
-    width: 1.5vw;
+    width: 1.25vw;
   }
   #windows-update-icon img {
     width: 2vw;
