--- a/style.css
+++ b/style.css
@@ -69,11 +69,10 @@ h4 {
 }
 footer {
   width: 100vw;
+  margin-top: auto;
   max-height: 100px;
-  height: fit-content;
 
   padding: 4px 0;
-  margin-top: auto;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   align-items: center;
@@ -127,12 +126,12 @@ footer button:active {
 button.taskbar-button {
   width: 30px;
   height: 30px;
+  padding: 20px;
 
   display: flex;
   align-items: center;
   justify-content: center;
 
-  padding: 20px;
 }
 
 button.taskbar-button img {
@@ -163,15 +162,14 @@ button:active.taskbar-button img {
 
 /* Centre div in <footer> */
 
-#windows-button {
-  margin-right: 5px;
-}
-
 #search-box {
+  height: fit-content;
+  position: relative;
+
+  margin-left: 5px;
+
   display: flex;
   align-items: center;
-  position: relative;
-  height: fit-content;
 }
 #search-box:hover,
 #search-box:focus-within {
