--- a/style.css
+++ b/style.css
@@ -70,6 +70,28 @@ h4 {
 #main-div img {
   pointer-events: none;
 }
+
+/* Desktop icons */
+
+main {
+  display: grid;
+  grid-template-rows: repeat(16, 50px);
+  grid-template-columns: repeat(17, 50px);
+  width: 100%;
+  height: 100%;
+  align-content: space-between;
+  justify-content: space-between;
+}
+.desktop-button {
+  width: 75px;
+  height: 75px;
+}
+.desktop-button img {
+  width: 30px;
+}
+
+/* Taskbar design */
+
 footer {
   width: 100vw;
   margin-top: auto;
@@ -134,7 +156,6 @@ button.taskbar-button {
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
 
 button.taskbar-button img {
