--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
   --default-text: black;
   --widget-subtext: grey;
 
-  --h3-font-size: 0.95rem;
-  --h4-font-size: 0.9rem;
+  --h3-font-size: 13px;
+  --h4-font-size: 0.95rem;
 
   --taskbar-border: 1.5px solid rgba(0, 0, 0, 0.1);
   --taskbar-button-border-hover: rgba(0, 0, 0, 0.05);
@@ -75,10 +75,10 @@ h4 {
 
 main {
   display: grid;
-  grid-template-rows: repeat(16, 50px);
-  grid-template-columns: repeat(17, 50px);
-  width: 100%;
-  height: 100%;
+  grid-template-rows: repeat(8, 1fr);
+  grid-template-columns: repeat(18, 1fr);
+  grid-auto-flow: column;
+
   align-content: space-between;
   justify-content: space-between;
 }
