--- a/style.css
+++ b/style.css
@@ -76,18 +76,21 @@ h4 {
 main {
   display: grid;
   grid-template-rows: repeat(8, 1fr);
-  grid-template-columns: repeat(18, 1fr);
+  grid-template-columns: repeat(16, 1fr);
+
   grid-auto-flow: column;
 
   align-content: space-between;
   justify-content: space-between;
+
+  margin: 0 5px;
 }
 .desktop-button {
-  width: 75px;
-  height: 75px;
+  width: 70px;
+  height: 70px;
 }
 .desktop-button img {
-  width: 30px;
+  width: 35px;
 }
 
 /* Taskbar design */
