--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ main {
 
 /* Taskbar design */
 
-footer {
+#taskbar {
   width: 100vw;
   margin-top: auto;
   max-height: 100px;
@@ -110,28 +110,28 @@ footer {
   border-top: var(--taskbar-border);
 }
 
-#footer-left,
-#footer-centre,
-#footer-right {
+#taskbar-left,
+#taskbar-centre,
+#taskbar-right {
   display: flex;
   flex-direction: row;
   align-items: center;
   align-self: stretch;
 }
-#footer-left {
+#taskbar-left {
   margin-left: 11px;
 }
-#footer-centre {
+#taskbar-centre {
   justify-content: center;
 }
-#footer-right {
+#taskbar-right {
   justify-content: flex-end;
   margin-right: 14px;
 }
 
-/* Buttons in footer */
+/* Buttons in taskbar */
 
-footer button {
+#taskbar button {
   background-color: transparent;
   border: 1px solid transparent;
   border-radius: 5px;
@@ -141,11 +141,11 @@ footer button {
   align-items: center;
   align-self: stretch;
 }
-footer button:hover {
+#taskbar button:hover {
   background-color: var(--taskbar-button-hover);
   border-color: var(--taskbar-button-border-hover);
 }
-footer button:active {
+#taskbar button:active {
   background-color: var(--taskbar-button-clicked);
 }
 
@@ -170,7 +170,7 @@ button:active.taskbar-button img {
   transform: scale(0.8);
 }
 
-/* Left div in <footer> */
+/* Left div in taskbar */
 
 #weather-button {
   padding-left: 10px;
@@ -187,7 +187,7 @@ button:active.taskbar-button img {
   color: var(--widget-subtext);
 }
 
-/* Centre div in <footer> */
+/* Centre div in taskbar */
 
 #search-box {
   height: fit-content;
@@ -229,7 +229,7 @@ button:active.taskbar-button img {
   margin-left: 5px;
 }
 
-/* Right div in <footer> */
+/* Right div in taskbar */
 
 #taskbar-tray-icon {
   padding: 0 10px;
@@ -248,7 +248,6 @@ button:active.taskbar-button img {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  /* font-size: 0.95em; */
 }
 
 /* Ensures that website can't be in portrait mode on mobile devices */
@@ -287,17 +286,17 @@ button:active.taskbar-button img {
   * {
     font-size: 1.6vw;
   }
-  footer {
+  #taskbar {
     /* grid-template-columns: repeat(3, minmax(0, 1fr)); */
     display: flex;
     justify-content: space-between;
     padding: 0.25vw 0;
   }
-  #footer-left,
-  #footer-right {
+  #taskbar-left,
+  #taskbar-right {
     margin: 0;
   }
-  /* #footer-left */
+  /* #taskbar-left */
   #weather-button {
     padding-right: 3vw;
     gap: 1vw;
@@ -306,7 +305,7 @@ button:active.taskbar-button img {
     width: 3vw;
   }
 
-  /* #footer-centre */
+  /* #taskbar-centre */
   #windows-button {
     margin: 0;
   }
@@ -336,7 +335,7 @@ button:active.taskbar-button img {
     margin: 0;
   }
 
-  /* #footer-right */
+  /* #taskbar-right */
   button {
     padding: 0 3px;
   }
