--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ main {
   display: grid;
   grid-template-rows: repeat(8, 1fr);
   grid-template-columns: repeat(16, 1fr);
+  gap: 5px 0;
 
   grid-auto-flow: column;
 
@@ -88,6 +89,11 @@ main {
 .desktop-button {
   width: 70px;
   height: 70px;
+  background: transparent;
+  border: none;
+}
+.desktop-button:hover {
+  background-color: rgba(255, 255, 255, 0.2);
 }
 .desktop-button img {
   width: 35px;
