--- a/style.css
+++ b/style.css
@@ -58,49 +58,21 @@ h4 {
   font-size: var(--h4-font-size);
   color: var(--default-text);
 }
-#main-div {
+main {
   width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
 }
-#main-div * {
+main * {
   user-select: none;
 }
-#main-div img {
+main img {
   pointer-events: none;
 }
 
-/* Desktop icons */
 
-main {
-  display: grid;
-  grid-template-rows: repeat(8, 1fr);
-  grid-template-columns: repeat(16, 1fr);
-  gap: 5px 0;
-
-  grid-auto-flow: column;
-
-  align-content: space-between;
-  justify-content: space-between;
-
-  margin: 0 5px;
-}
-.desktop-button {
-  width: 70px;
-  height: 70px;
-  background: transparent;
-  border: none;
-}
-.desktop-button:hover {
-  background-color: rgba(255, 255, 255, 0.2);
-}
-.desktop-button img {
-  width: 35px;
-}
-
-/* Taskbar design */
-
+/* TASKBAR CONFIGURATION */
 #taskbar {
   width: 100vw;
   margin-top: auto;
@@ -115,7 +87,6 @@ main {
   background: linear-gradient(90deg, #e5effa, #d7e0f7, #e5effa);
   border-top: var(--taskbar-border);
 }
-
 #taskbar-left,
 #taskbar-centre,
 #taskbar-right {
@@ -135,8 +106,7 @@ main {
   margin-right: 14px;
 }
 
-/* Buttons in taskbar */
-
+/* buttons in taskbar */
 #taskbar button {
   background-color: transparent;
   border: 1px solid transparent;
@@ -154,9 +124,6 @@ main {
 #taskbar button:active {
   background-color: var(--taskbar-button-clicked);
 }
-
-/* Taskbar buttons */
-
 button.taskbar-button {
   width: 30px;
   height: 30px;
@@ -166,18 +133,15 @@ button.taskbar-button {
   align-items: center;
   justify-content: center;
 }
-
 button.taskbar-button img {
   width: 24px;
   transition: transform 0.15s ease;
 }
-
 button:active.taskbar-button img {
   transform: scale(0.8);
 }
 
-/* Left div in taskbar */
-
+/* Left side of Taskbar */
 #weather-button {
   padding-left: 10px;
   padding-right: 70px;
@@ -193,8 +157,7 @@ button:active.taskbar-button img {
   color: var(--widget-subtext);
 }
 
-/* Centre div in taskbar */
-
+/* Centre of Taskbar */
 #search-box {
   height: fit-content;
   position: relative;
@@ -228,15 +191,13 @@ button:active.taskbar-button img {
   position: absolute;
   left: 12px;
 }
-
 #taskbar-icons {
   display: flex;
   flex-direction: row;
   margin-left: 5px;
 }
 
-/* Right div in taskbar */
-
+/* Right side of Taskbar */
 #taskbar-tray-icon {
   padding: 0 10px;
 }
@@ -256,8 +217,8 @@ button:active.taskbar-button img {
   align-items: flex-end;
 }
 
-/* Ensures that website can't be in portrait mode on mobile devices */
 
+/* IF USER HAS A MOBILE DEVICE IN PORTRAIT MODE */
 #portrait-mode {
   display: none; /* This is hidden by default */
 
